--- a/MarleneCollectionXmlTool.Domain/MarleneCollectionXmlTool.Domain.csproj
+++ b/MarleneCollectionXmlTool.Domain/MarleneCollectionXmlTool.Domain.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
     <PackageReference Include="MySql.Data" Version="8.0.33" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="WinSCP" Version="6.1.1" />
   </ItemGroup>
 
