--- a/MarleneCollectionXmlTool.Domain.Tests/MarleneCollectionXmlTool.Domain.Tests.csproj
+++ b/MarleneCollectionXmlTool.Domain.Tests/MarleneCollectionXmlTool.Domain.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="7.4.0" />
+    <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
